[gd_scene load_steps=23 format=3 uid="uid://b5rxwpekx0vn3"]

[ext_resource type="Script" path="res://Frog.gd" id="1_1invm"]
[ext_resource type="Texture2D" uid="uid://ch46nhj21eltf" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-idle.png" id="1_iokys"]
[ext_resource type="Texture2D" uid="uid://dwln8rtros4sn" path="res://Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="2_616lx"]
[ext_resource type="Texture2D" uid="uid://dhhethub7h00w" path="res://Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="2_kqnsq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btm3o"]
size = Vector2(16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_34wy7"]
atlas = ExtResource("2_kqnsq")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_iay4d"]
atlas = ExtResource("2_kqnsq")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccuqa"]
atlas = ExtResource("2_kqnsq")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xurfu"]
atlas = ExtResource("2_kqnsq")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3o30"]
atlas = ExtResource("2_kqnsq")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl2k4"]
atlas = ExtResource("2_kqnsq")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2dym"]
atlas = ExtResource("1_iokys")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ob4o"]
atlas = ExtResource("1_iokys")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6tua"]
atlas = ExtResource("1_iokys")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpetx"]
atlas = ExtResource("1_iokys")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0ldp"]
atlas = ExtResource("2_616lx")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6o4p"]
atlas = ExtResource("2_616lx")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mij3i"]
atlas = ExtResource("2_616lx")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_80jtq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34wy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iay4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccuqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xurfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3o30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl2k4")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2dym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ob4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6tua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpetx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2dym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2dym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2dym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2dym")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0ldp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6o4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mij3i")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p3evx"]
radius = 133.004

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8itvv"]
size = Vector2(17.5, 7.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjhad"]
size = Vector2(25.75, 11.375)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_1invm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
rotation = 1.5708
shape = SubResource("RectangleShape2D_btm3o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_80jtq")
animation = &"Idle"

[node name="Player Detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Detection"]
shape = SubResource("CircleShape2D_p3evx")

[node name="Frog Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frog Death"]
position = Vector2(0.25, -15)
shape = SubResource("RectangleShape2D_8itvv")

[node name="Player Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player Collision"]
position = Vector2(0, -5.6875)
shape = SubResource("RectangleShape2D_gjhad")

[connection signal="body_entered" from="Player Detection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="Player Detection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Frog Death" to="." method="_on_frog_death_body_entered"]
[connection signal="body_entered" from="Player Collision" to="." method="_on_player_collision_body_entered"]
